<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MMeditationMudraActivity">


    <!--    toolbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/arrow_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_30sdp"
            android:text=" Meditation"
            android:textColor="#4B085C"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--    view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_200sdp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/meditation_mudra" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Meditation Chakras &amp; Mantra."
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chkra1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chakra" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_data2" />

                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chkra" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_title_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_title_data1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_title_data2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_title_data3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bija_mantra_title_data4" />

                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chkra2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras_title" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras_title_data3" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data4" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data5" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data6" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras_title_data7" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras_title_data9" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data10" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras_title_data11" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data12" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras_title_data13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras1_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_root"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras2_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_sacral"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras3" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras3_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_solar_plexus"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras4" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras4_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_heart"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras5" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras5_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_throat"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras6" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras6_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_third_eye"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/mudras7" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mudras7_data" />
                <ImageView
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/chakra_crown"/>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>