<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MHowtoMeditateActivity">


    <!--    toolbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/arrow_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="How to Meditate?"
            android:textColor="#4B085C"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

    </LinearLayout>

<!--    view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_200sdp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/how_to_meditate" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Meditation is something everyone can do, here’s how."
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/how_to_meditate"
                    android:textSize="@dimen/_20ssp" />
<!--Line1-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/take_seat"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/take_seat_data"
                    android:textSize="@dimen/_20ssp" />
<!--Line2-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/set_time"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/set_time_data"
                    android:textSize="@dimen/_20ssp" />

<!--                line3-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:text="@string/notice_body"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/notice_body_data"
                    android:textSize="@dimen/_20ssp" />
<!--line4-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/feel_breath"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/feel_breath_data"
                    android:textSize="@dimen/_20ssp" />

<!--                line5-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/notice_mind"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/notice_mind_data"
                    android:textSize="@dimen/_20ssp" />

<!--                line6-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/be_kind"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/be_kind_data"
                    android:textSize="@dimen/_20ssp" />

<!--                line7-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/close_kind"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/close_kind_data"
                    android:textSize="@dimen/_20ssp" />
<!--                description-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/description"
                    android:textSize="@dimen/_20ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/description_data"
                    android:textSize="@dimen/_20ssp" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>